ZadcNet/NativeMethods.cs


        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZOpen(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZClose(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZResetDSP(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZInitDSP(int typeDevice, int numberDSP, [MarshalAs(UnmanagedType.LPStr)] string fileName);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetSerialNumberDSP(int typeDevice, int numberDSP, out int serialNumber);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetNameDevice(int typeDevice, int numberDSP, StringBuilder strName, int maxSizeStr);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetVersion(int typeDevice, int numberDSP, StringBuilder verDSP, StringBuilder verDRV, StringBuilder verLIB);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetTypeConnection(int typeDevice, int numberDSP,out int type);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetError(int typeDevice, int numberDSP,out int error);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetModify(int typeDevice, int numberDSP,out int modify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetFlag(int typeDevice, int numberDSP,out uint flag);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableExtFreq(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetEnableExtFreq(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableExtStart(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetEnableExtStart(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZTestCode(int typeDevice, int numberDSP,out int code0,out int code1,out int code2);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetQuantityChannelDigPort(int typeDevice, int numberDSP,out int quantityChannel);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigOutEnable(int typeDevice, int numberDSP,out uint digitalOutEnableMask);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetDigOutEnable(int typeDevice, int numberDSP, uint digitalOutEnableMask);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetBitDigOutEnable(int typeDevice, int numberDSP, int numberOfBit);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetBitMaskDigOutEnable(int typeDevice, int numberDSP, uint maskOfBits);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZClrBitDigOutEnable(int typeDevice, int numberDSP, int numberOfBit);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZClrBitMaskDigOutEnable(int typeDevice, int numberDSP, uint maskOfBits);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigInput(int typeDevice, int numberDSP,out uint digitalInput);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigOutput(int typeDevice, int numberDSP,out uint digitalOutput);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetDigOutput(int typeDevice, int numberDSP, uint digitalOutput);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetBitDigOutput(int typeDevice, int numberDSP, int numberOfBit);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetBitMaskDigOutput(int typeDevice, int numberDSP, uint maskOfBits);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZClrBitDigOutput(int typeDevice, int numberDSP, int numberOfBit);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZClrBitMaskDigOutput(int typeDevice, int numberDSP, uint maskOfBits);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigitalMode(int typeDevice, int numberDSP,out int mode);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetDigitalMode(int typeDevice, int numberDSP, int mode);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMasterSynchr(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetMasterSynchr(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZFindPWM(int typeDevice, int numberDSP,out int present);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZStartPWM(int typeDevice, int numberDSP, int Start0, int Start1, int Start2);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZStopPWM(int typeDevice, int numberDSP, int Stop0, int Stop1, int Stop2);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetFreqPWM(int typeDevice, int numberDSP, int Rate, int Period);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetOnDutyPWM(int typeDevice, int numberDSP, int OnDutyPWM0, int OnDutyPWM1, int OnDutyPWM2, int ShiftPWM1, int ShiftPWM2);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZRegulatorPWM(int typeDevice, int numberDSP, IntPtr data,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableADC(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableDAC(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetTypeADC(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetTypeDAC(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetStartADC(int typeDevice, int numberDSP,out int status);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetStartDAC(int typeDevice, int numberDSP,out int status);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZStartADC(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZStartDAC(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZStopADC(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZStopDAC(int typeDevice, int numberDSP);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetQuantityChannelADC(int typeDevice, int numberDSP,out int quantityChannel);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetQuantityChannelDAC(int typeDevice, int numberDSP,out int quantityChannel);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigitalResolutionADC(int typeDevice, int numberDSP,out double digitalResolution);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigitalResolutionDAC(int typeDevice, int numberDSP,out double digitalResolution);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigitalResolChanADC(int typeDevice, int numberDSP, int numberChannel,out double digitalResolChan);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetDigitalResolChanDAC(int typeDevice, int numberDSP, int numberChannel,out double digitalResolChan);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetBitsADC(int typeDevice, int numberDSP,out int numberBits);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetBitsDAC(int typeDevice, int numberDSP,out int numberBits);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetWordsADC(int typeDevice, int numberDSP,out int numberWords);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetWordsDAC(int typeDevice, int numberDSP,out int numberWords);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetFreqADC(int typeDevice, int numberDSP,out double freq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetFreqDAC(int typeDevice, int numberDSP,out double freq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetListFreqADC(int typeDevice, int numberDSP, int next,out double freq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetListFreqDAC(int typeDevice, int numberDSP, int next,out double freq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetNextFreqADC(int typeDevice, int numberDSP, int next,out double freq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetNextFreqDAC(int typeDevice, int numberDSP, int next,out double freq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetFreqADC(int typeDevice, int numberDSP, double freqIn,out double freqOut);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetFreqDAC(int typeDevice, int numberDSP, double freqIn,out double freqOut);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetExtFreqADC(int typeDevice, int numberDSP,out double oporFreq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetExtFreqDAC(int typeDevice, int numberDSP,out double oporFreq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetExtFreqADC(int typeDevice, int numberDSP, double extFreq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetExtFreqDAC(int typeDevice, int numberDSP, double extFreq);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableExtFreqADC(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableExtFreqDAC(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetEnableExtFreqADC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetEnableExtFreqDAC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableExtStartADC(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetEnableExtStartDAC(int typeDevice, int numberDSP,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetEnableExtStartADC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetEnableExtStartDAC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetInterruptADC(int typeDevice, int numberDSP,out int size);
